force-app/main/default/objects/B3_Project__c/B3_Project__c.object-meta.xml
<CustomObject>
    <description>Captures all projects</description>
    <label>B3 Project</label>
    <nameField>
        <label>B3 Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B3 Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>