force-app/main/default/objects/B3_Project__c/fields/Associated_LCAT__c.field-meta.xml
<CustomField>
    <fullName>Associated_LCAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated LCAT</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>B3 Projects</relationshipLabel>
    <relationshipName>B3_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>