force-app/main/default/objects/B3_Project__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>99</length>
    <type>Text</type>
</CustomField>