force-app/main/default/objects/B3_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Description</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>B3 Projects</relationshipLabel>
    <relationshipName>B3_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>