force-app/main/default/objects/B3_Project__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Many expenses to one project</description>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>B3 Projects</relationshipLabel>
    <relationshipName>B3_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>