force-app/main/default/objects/B3_Project__c/fields/Funding_Code__c.field-meta.xml
<CustomField>
    <fullName>Funding_Code__c</fullName>
    <label>Funding Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>