force-app/main/default/objects/B3_Project__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <formula>Total_Value__c / Period_Of_Performance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>