force-app/main/default/objects/B3_Project__c/fields/Period_Of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Period_Of_Performance__c</fullName>
    <description>POP in Months</description>
    <formula>(MONTH( End_Date__c ) + (12*(YEAR(End_Date__c )-YEAR( Start_Date__c ))) - MONTH(Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Of Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>