force-app/main/default/objects/B3_Project__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO #</label>
    <length>99</length>
    <type>Text</type>
</CustomField>