force-app/main/default/objects/B3_Project__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B3 Projects</relationshipLabel>
    <relationshipName>B3_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>