force-app/main/default/objects/B3_Project__c/fields/Prime_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Prime_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If B3 is the subcontractor, please add the prime contractor account</inlineHelpText>
    <label>Prime Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B3 Projects</relationshipLabel>
    <relationshipName>B3_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>