force-app/main/default/objects/B3_Project__c/fields/Probability_of_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Obligation__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Probability of Obligation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>