force-app/main/default/objects/B3_Project__c/fields/Procurement_Type__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Type__c</fullName>
    <label>Procurement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLIN</fullName>
            </value>
            <value>
                <fullName>CLIN</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>SubK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>