force-app/main/default/objects/B3_Project__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <label>Project Owner</label>
    <type>TextArea</type>
</CustomField>