force-app/main/default/objects/B3_Project__c/fields/SLIN__c.field-meta.xml
<CustomField>
    <fullName>SLIN__c</fullName>
    <label>SLIN</label>
    <length>99</length>
    <type>Text</type>
</CustomField>