force-app/main/default/objects/B3_Project__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>