force-app/main/default/objects/B3_Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
                <default>true</default>
                <label>Existing</label>
            </value>
            <value>
                <fullName>Follow-on</fullName>
            </value>
            <value>
                <fullName>Plus-up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>