force-app/main/default/objects/B3_Project__c/fields/Unanet_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Unanet_Project_ID__c</fullName>
    <description>Unanet Project ID</description>
    <label>Unanet Project ID</label>
    <length>99</length>
    <type>Text</type>
</CustomField>