force-app/main/default/objects/B3_Project__c/recordTypes/Prime.recordType-meta.xml
<RecordType>
    <fullName>Prime</fullName>
    <active>true</active>
    <description>Prime contractor</description>
    <label>Prime</label>
</RecordType>