force-app/main/default/objects/B3_Project__c/recordTypes/Sub.recordType-meta.xml
<RecordType>
    <fullName>Sub</fullName>
    <active>true</active>
    <description>Subcontractor</description>
    <label>Sub</label>
</RecordType>